<resources>
    <string name="app_name">AgendaApp</string>
    <string name="welcome">Organiza tus tareas con tu Agenda Personal</string>
    <string name="loading">Cargando...</string>
    <string name="hint_title">Evento:</string>
    <string name="hint_description">Descripcion:</string>
    <string name="hint_date">Fecha:</string>
    <string name="addContactTitle">Agregar contactos</string>
    <string name="title_form">Registrar Evento</string>
    <string name="save">Guardar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>
    <string name="call">Llamar a Contactos</string>
    <string name="btn_send_msn">Enviar SMS a Contactos</string>
    <string name="about">Acerca de...</string>
    <string name="about_title">Informacion Personal:</string>
    <string name="about_name">Efraín Martínez Guerrero</string>
    <string name="about_phone">4611823113</string>
    <string name="about_email">efrainmg90@gmail.com</string>
    <string name="about_code">https://github.com/efrainmg90/AgendaApp</string>
    <string name="hint_hour">Hora:</string>
    <string name="empty_list">Lista vacia!  Agrege un evento.</string>
</resources>
