<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:layout_below="@+id/button_edit"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:layout_below="@+id/button_delete"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_send_msn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send_msn"
        android:layout_below="@+id/button_call"
        android:layout_alignParentStart="true" />
</RelativeLayout>