<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_width="30dp"
            android:layout_marginRight="40dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_name"
            android:textSize="15dp"
            android:textAlignment="viewStart" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_email_black_24dp"
            android:layout_marginRight="40dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_email"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_phone_black_24dp"
            android:layout_width="30dp"
            android:layout_marginRight="40dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/about_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_phone"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_code_black_24dp"
            android:layout_width="30dp"
            android:layout_marginRight="10dp"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/about_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_code"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>