<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.efrainmg90.agendaapp.activities.SaveAppointmentActivity">

    <LinearLayout
        android:id="@+id/area_title_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/title_main"
            android:text="@string/title_form"
            android:layout_width="match_parent"
            android:textSize="25dp"
            android:textAlignment="center"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/area_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_title_form"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_tilte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_event_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_title"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_description_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="2"
                android:hint="@string/hint_description"
                 />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_description"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_date_range_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_date"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_date"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_watch_later_black_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/edt_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_hour"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/area_hour"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_img_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addContactTitle"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="14dp" />
            <ImageView
                android:id="@+id/imvIcont_add_contact"
                android:layout_width="40dp"
                android:src="@drawable/agregarcontacto"
                android:layout_height="40dp"
                android:layout_below="@+id/title_img_contact"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/area_contacts"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_save_appointment_with_contacs"
            android:layout_width="match_parent"
            android:text="@string/save"
            android:background="@color/accent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content" />
        </LinearLayout>
</RelativeLayout>
